<resources>
    <string name="app_name">Api Request</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="id">ID:</string>
    <string name="email">Email:</string>
    <string name="gender">Gender:</string>
    <string name="status">Status:</string>
</resources>